# wa3li

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh  package.xml  setup.py
include/wa3li/: kinect.h  kobuki.h  nav.h
launch/: wa3li.py
src/: kinect.cpp  kobuki.cpp  nav.cpp
